# mail-server

./: CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
aman_mail/: __init__.py  auth.py  cli.py  client.py  handler.py  route.py  server.py  util.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/aman_mail/: __init__.py  cli.py
tests/: __init__.py  test_aman_mail.py
