[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aman_mail"
version = "0.1.0"
description = "Cyber in the cloud."
readme = "README.rst"
authors = [
  {name = "Segel", email = "segel@segel.com"}
]
maintainers = [
  {name = "Segel", email = "segel@segel.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/segel/aman_mail/issues"
changelog = "https://github.com/segel/aman_mail/blob/master/changelog.md"
homepage = "https://github.com/segel/aman_mail"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

